--- a/examples/basic.html
+++ b/examples/basic.html
@@ -3,10 +3,11 @@
 <html lang="en">
 
 <head>
-	<title>Тройные интегралы</title>
+	<title>Шаблон eulerface</title>
 	
-	<link rel="stylesheet" type="text/css" href="../stylesheets/triple_int_alt.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="../stylesheets/selector_style.css" media="screen" />
+	<link rel="stylesheet" href="../css/eulerface_layout.css" media="screen" />
+	<link rel="stylesheet" href="../css/eulerface_inline.css" media="screen" />
+	<link rel="stylesheet" href="../css/eulerface_select.css" media="screen" />
 	
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
@@ -106,10 +107,9 @@
 			"HTML-CSS": { linebreaks: { automatic: true, width: "75% container" } }
 		});
     </script>
-	<script src="problemlist.js"></script>
-	<script src="../loader.js"></script>
-	<script src = '../src/math_mvc.js'></script>
-	<script src = 'triple_integrals.js'></script>
+	<script src = '../js/eulerface.js'></script>
+	<script src = 'problemlist.js'></script>
+	<script src = 'basic_script.js'></script>
 </body>
 
 </html>
