--- a/examples/basic.html
+++ b/examples/basic.html
@@ -51,6 +51,12 @@
 					<p>
 					Найти объем тела, ограниченного поверхностями:
 					</p>
+					<select id = 'testSelect'>
+						<option value = 'IT'>Italy</option>
+						<option value = 'GB'>Great Britain</option>
+						<option value = 'RU'>Russia</option>
+						<option value = 'GR'>Greece</option>
+					</select>
 					<div id = 'volumeSelect'></div>
 					<div id = 'sectionControl'></div>
 					<div id = 'originalShapesControl'></div>
@@ -123,6 +129,7 @@
 		});
     </script>
 	<script src = '../js/eulerface.js'></script>
+	<script src = '../js/select.js'></script>
 	<script src = 'problemlist.js'></script>
 	<script src = 'basic_script.js'></script>
 </body>
