--- a/examples/basic.html
+++ b/examples/basic.html
@@ -33,11 +33,11 @@
 			<figure class = 'visualFlex'>
 				<div class = 'aspect'>
 					<div class = 'aspectHolder'></div>
-					<figure id = 'plot2d' class = 'subVisual' style = 'background: khaki'></figure>
+					<figure id = 'plot2d' class = 'subVisual' style = 'background: orange'></figure>
 				</div>				
 				<div class = 'aspect'>
 					<div class = 'aspectHolder'></div>
-					<figure id = 'plot3d' class = 'subVisual' style = 'background: cyan'></figure>
+					<figure id = 'plot3d' class = 'subVisual' style = 'background: skyblue'></figure>
 				</div>
 			</figure>
 			<figcaption class = 'visualDesc'>
