added body text

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -83,32 +83,33 @@
 					вы должны ориентироваться в основных поверхностях пространства 
 					и уметь выполнять простейшие трёхмерные чертежи.
 					</p>
-
-					<p>
-					Некоторые приуныли, понимаю…. Увы, статью нельзя озаглавить 
-					«тройные интегралы для чайников», и кое-что знать/уметь нужно. 
-					Но ничего страшного – весь материал изложен в предельно доступной 
-					форме и осваивается в кратчайшие сроки!
-					</p>
-					
-					<p>
-					Что значит вычислить тройной интеграл и что это вообще такое?
-					Вычислить тройной интеграл – это значит найти ЧИСЛО:	
-					В простейшем случае, когда , тройной интеграл  численно равен объёму тела. 
-					И действительно, в соответствии с общим смыслом интегрирования, произведение 
-					равно бесконечно малому объёму элементарного «кирпичика» тела. А тройной
-					интеграл как раз и объединяет все эти бесконечно малые частички по области, 
-					в результате чего получается интегральное (суммарное) значение объёма тела: .
-					</p>
-
-					<p>
-					Кроме того, у тройного интеграла есть важные физические приложения. Но об этом позже – 
-					во 2-ой части урока, посвящённой вычислениям произвольных тройных интегралов, у 
-					которых функция  в общем случае отлична от константы и непрерывна в области . В 
-					данной же статье детально рассмотрим задачу нахождения объёма, которая по моей 
-					субъективной оценке встречается в 6-7 раз чаще.
-					</p>
 				</div>
+			</div>
+			<div class = 'bodyText'>
+				<p>
+				Некоторые приуныли, понимаю…. Увы, статью нельзя озаглавить 
+				«тройные интегралы для чайников», и кое-что знать/уметь нужно. 
+				Но ничего страшного – весь материал изложен в предельно доступной 
+				форме и осваивается в кратчайшие сроки!
+				</p>
+					
+				<p>
+				Что значит вычислить тройной интеграл и что это вообще такое?
+				Вычислить тройной интеграл – это значит найти ЧИСЛО:	
+				В простейшем случае, когда , тройной интеграл  численно равен объёму тела. 
+				И действительно, в соответствии с общим смыслом интегрирования, произведение 
+				равно бесконечно малому объёму элементарного «кирпичика» тела. А тройной
+				интеграл как раз и объединяет все эти бесконечно малые частички по области, 
+				в результате чего получается интегральное (суммарное) значение объёма тела: .
+				</p>
+
+				<p>
+				Кроме того, у тройного интеграла есть важные физические приложения. Но об этом позже – 
+				во 2-ой части урока, посвящённой вычислениям произвольных тройных интегралов, у 
+				которых функция  в общем случае отлична от константы и непрерывна в области . В 
+				данной же статье детально рассмотрим задачу нахождения объёма, которая по моей 
+				субъективной оценке встречается в 6-7 раз чаще.
+				</p>
 			</div>
 		</section>
 	</article>
