--- a/examples/basic.html
+++ b/examples/basic.html
@@ -102,14 +102,14 @@
 				интеграл как раз и объединяет все эти бесконечно малые частички по области, 
 				в результате чего получается интегральное (суммарное) значение объёма тела: .
 				</p>
-
-				<p>
+				
+				<aside class = 'sideNote'>				
 				Кроме того, у тройного интеграла есть важные физические приложения. Но об этом позже – 
 				во 2-ой части урока, посвящённой вычислениям произвольных тройных интегралов, у 
 				которых функция  в общем случае отлична от константы и непрерывна в области . В 
 				данной же статье детально рассмотрим задачу нахождения объёма, которая по моей 
 				субъективной оценке встречается в 6-7 раз чаще.
-				</p>
+				</aside>
 			</div>
 		</section>
 	</article>
