--- a/examples/basic.html
+++ b/examples/basic.html
@@ -26,7 +26,6 @@
 	<article class = 'articleContent'>
 		<header id = 'articleHeader'>
 			<h1 id = 'articleTitle'>Тройные интегралы</h1>
-			<h2 id = 'sectionTitle'></h2>
 		</header>
 	
 		<figure class = 'visual'>
@@ -34,6 +33,10 @@
 				<div class = 'aspect'>
 					<div class = 'aspectHolder'></div>
 					<figure id = 'plot2d' class = 'subVisual' style = 'background: orange'></figure>
+				</div>				
+				<div class = 'aspect'>
+					<div class = 'aspectHolder'></div>
+					<figure id = 'plot2d' class = 'subVisual' style = 'background: red'></figure>
 				</div>				
 				<div class = 'aspect'>
 					<div class = 'aspectHolder'></div>
@@ -46,6 +49,7 @@
 		</figure>
 		
 		<section class = 'articlePage' id = 'lessonVolume'>
+			<h2 class = 'sectionTitle'></h2>
 			<div class = 'dynamicBlock'>
 				<div class = 'control'>
 					<p>
@@ -57,34 +61,39 @@
 					<div id = 'options'></div>
 				</div>
 				<div class = 'controlled'>
-					<p>
-					Тройные интегралы – это то, чего уже можно не бояться =) Ибо 
-					если Вы читаете сей текст, то, скорее всего, неплохо разобрались 
-					с теорией и практикой «обычных» интегралов, а также двойными 
-					интегралами. А там, где двойной, неподалёку и тройной:
-					$$ \iiint\limits_{T} f(x, y, z) dxdydz $$
-					</p>
+					<div id = 'V81A'>
+						<p>
+						Тройные интегралы – это то, чего уже можно не бояться =) Ибо 
+						если Вы читаете сей текст, то, скорее всего, неплохо разобрались 
+						с теорией и практикой «обычных» интегралов, а также двойными 
+						интегралами. А там, где двойной, неподалёку и тройной:
+						$$ \iiint\limits_{T} f(x, y, z) dxdydz $$
+						</p>
 
-					<p>
-					Разбираемся в записи:
-					<ul>
-						<li>\( \iiint \) &mdash; значок тройного интеграла;</li>
-						<li>\( u = f(x, y, z) \) &mdash; подынтегральная функция трёх переменных;</li>
-						<li>\( dxdydz \) &mdash; произведение дифференциалов.</li>
-						<li>\( T \) &mdash; область интегрирования.</li>
-					</ul>
-					</p>
+						<p>
+						Разбираемся в записи:
+						<ul>
+							<li>\( \iiint \) &mdash; значок тройного интеграла;</li>
+							<li>\( u = f(x, y, z) \) &mdash; подынтегральная функция трёх переменных;</li>
+							<li>\( dxdydz \) &mdash; произведение дифференциалов.</li>
+							<li>\( T \) &mdash; область интегрирования.</li>
+						</ul>
+						</p>
+					</div>
 					
-					<p>
-					Особо остановимся на области интегрирования. Если в двойном 
-					интеграле она представляет собой плоскую фигуру, то здесь – 
-					пространственное тело, которое, как известно, ограничено 
-					множеством поверхностей. Таким образом, помимо вышеуказанного 
-					вы должны ориентироваться в основных поверхностях пространства 
-					и уметь выполнять простейшие трёхмерные чертежи.
-					</p>
+					<div id = 'V82B'>
+						<p>
+						Особо остановимся на области интегрирования. Если в двойном 
+						интеграле она представляет собой плоскую фигуру, то здесь – 
+						пространственное тело, которое, как известно, ограничено 
+						множеством поверхностей. Таким образом, помимо вышеуказанного 
+						вы должны ориентироваться в основных поверхностях пространства 
+						и уметь выполнять простейшие трёхмерные чертежи.
+						</p>
+					</div>
 				</div>
 			</div>
+			
 			<div class = 'bodyText'>
 				<p>
 				Некоторые приуныли, понимаю…. Увы, статью нельзя озаглавить 
